--- a/Emerytura/ConsoleApp1Interaktywnie/ConsoleApp1Interaktywnie.csproj
+++ b/Emerytura/ConsoleApp1Interaktywnie/ConsoleApp1Interaktywnie.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A4AD485C-443F-41BC-983E-D8054CCAF1B9}</ProjectGuid>
+    <ProjectGuid>{DDE10A7C-A1B7-4B68-9FD6-2DD6BB893AE1}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>EmeryturaSolution</RootNamespace>
-    <AssemblyName>EmeryturaSolution</AssemblyName>
+    <RootNamespace>ConsoleApp1Interaktywnie</RootNamespace>
+    <AssemblyName>ConsoleApp1Interaktywnie</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
